# pytia-property-manager

./: .pre-commit-config.yaml  .pylintrc  README.md  _build.py  _release.py  pyproject.toml  requirements.txt
docs/: DEFAULT_FILES.md  INSTALLATION.md  SAMPLE_FILES.md  USAGE.md  WORKSPACE_FILE.md
docs/pytia_property_manager/: const.html  decorators.html  dependencies.html  gui.html  index.html  main.html
docs/pytia_property_manager/app/: callbacks.html  frames.html  index.html  layout.html  state_setter.html  tooltips.html  traces.html  vars.html
docs/pytia_property_manager/handler/: index.html  properties.html
docs/pytia_property_manager/helper/: appearance.html  index.html  launcher.html  lazy_loaders.html  messages.html  translators.html  values.html  verifications.html
docs/pytia_property_manager/material_manager/: callbacks.html  frames.html  index.html  layout.html  traces.html  vars.html
pytia_property_manager/: __init__.py  const.py  decorators.py  dependencies.py  gui.py  main.py
pytia_property_manager/app/: __init__.py  callbacks.py  frames.py  layout.py  state_setter.py  tooltips.py  traces.py  vars.py
pytia_property_manager/handler/: __init__.py  properties.py
pytia_property_manager/helper/: launcher.py  lazy_loaders.py  messages.py  translators.py  values.py  verifications.py
pytia_property_manager/material_manager/: __init__.py  callbacks.py  frames.py  layout.py  traces.py  vars.py
pytia_property_manager/resources/: __init__.py  dependencies.json  information.default.json  processes.default.json  properties.default.json  settings.sample.json  utils.py
tests/: __init__.py  test_dependencies.py  test_pytia_property_manager.py  test_resources.py
vbs/: build.template.catvbs
(+8 files in other folders)
